feat: report instance info
